// Minimal shim for TensorFlow/TF Serving protos.
//
// The upstream TensorFlow proto `tensorflow/core/protobuf/error_codes.proto`
// imports this file as `xla/tsl/protobuf/error_codes.proto`.
//
// We keep a small subset here that is sufficient for compiling TF Serving API
// protos used by monolith-serving's TF Serving compatibility layer.

syntax = "proto3";

package tensorflow.error;

// Canonical error codes.
//
// NOTE: This is intentionally a superset-friendly stub. If you need additional
// codes later, add them with their standard numeric values.
enum Code {
  OK = 0;
  CANCELLED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  UNAUTHENTICATED = 16;
  RESOURCE_EXHAUSTED = 8;
  FAILED_PRECONDITION = 9;
  ABORTED = 10;
  OUT_OF_RANGE = 11;
  UNIMPLEMENTED = 12;
  INTERNAL = 13;
  UNAVAILABLE = 14;
  DATA_LOSS = 15;
}
